[package]
name = "solana-metrics"
description = "Solana Metrics"
documentation = "https://docs.rs/solana-metrics"
version = "2.1.0"
rust-version = "1.88.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
solana-sdk = "=2.1.0" # Fetch this from crates.io, instead of the workspace
thiserror = "1.0.65"
log = "0.4.22"
